update welcome index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,7 +51,7 @@
             </h1>
           </div>  
           <p class="text-white leading-relaxed text-3xl italic">Built for traders by traders.</p>
-          <p class="text-white leading-relaxed mb-5 text-3xl italic">Manage your tasks in one place.</p>
+          <p class="text-white leading-relaxed mb-5 text-xl italic">Get the latest information on the rises and falls in stocks</p>
           <a href="#links" class="mx-auto mt-2 lg:mx-0 hover:underline bg-black text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Get Started
           </a>
@@ -148,18 +148,13 @@
       <div class="w-full mb-4">
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
       </div>
-      <h3 class="my-4 text-3xl leading-tight">
-        Main Hero Message to sell yourself!
-      </h3>
+
       <a href="#links" class="mx-auto pt-2 lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
         Get Started
       </a>
       
     </section>
-    
-    <%= link_to 'Admin Sign Up', new_admin_registration_path %><br>
-    <%= link_to 'Admin Sign In', new_admin_session_path %><br>
-    
+        
     <!-- jQuery if you need it
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   -->
