--- a/app/views/buyers/_index.html.erb
+++ b/app/views/buyers/_index.html.erb
@@ -171,22 +171,22 @@ table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, table.dataT
                         <%= broker_stock. companyname %></td>
                         <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
                         <%= broker_stock.price %></td>
-                        <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
+                        <td>
                           <%= form_with model: BuyerStock.new, local: true do |f| %>
                             <%= f.hidden_field :broker_id, :value => broker_stock.user_id %>
                             <%= f.hidden_field :user_id, :value => current_user.id %>
                             <%= f.hidden_field :stock_id, :value => broker_stock.stock_id %>
                             <%= f.hidden_field :companyname, :value => broker_stock.companyname %>
                             <%= f.hidden_field :price, :value => broker_stock.price %>
-                            <%= f.number_field :quantity, class: 'bg-blue-100 text-black pl-4 w-32', placeholder: 'Quantity' %>
+                            <%= f.number_field :quantity, class: 'bg-blue-100 text-black pl-4 w-24', placeholder: 'Quantity' %>
                             <%= f.submit 'Add to Portolio', class:"w-24 rounded text-xs text-center text-green-400 ring ring-green-400 p-1 cursor-pointer ml-2"%>
-                          <% end %>
                             <% if BuyerStock.all.where(user_id: current_user.id, stock_id: broker_stock.stock_id).count > 0 %>
                               <% id = BuyerStock.find_by(user_id: current_user.id, stock_id: broker_stock.stock_id) %>
-                              <%= button_to 'Remove', buyer_stock_path(broker_stock.stock_id), method: :delete, data: { confirm: 'Are you sure?' }, class: "w-16 rounded text-xs text-center text-red-400 ring ring-red-400 p-1 cursor-pointer" %>
+                              <%= link_to image_tag("delete_red.svg",class:"w-6 h-6 cursor-pointer") ,buyer_stock_path(broker_stock.stock_id), method: :delete, data: { confirm: 'Are you sure?' } %>
+                          <% end %>
                           <% end %>
                         </td>
-                    </tr>    
+                      </tr>    
                     <% end %>
                 </tbody>
               </table>
