--- a/app/views/buyers/_index.html.erb
+++ b/app/views/buyers/_index.html.erb
@@ -180,9 +180,8 @@ table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, table.dataT
                             <%= f.hidden_field :price, :value => broker_stock.price %>
                             <%= f.number_field :quantity, class: 'bg-blue-100 text-black pl-4 w-24 rounded-xl', placeholder: 'Quantity' %>
                             <%= f.submit 'Add to Portolio', class:"w-24 rounded text-xs text-center text-green-400 ring ring-green-400 p-1 cursor-pointer ml-2"%>
-                          <% end %></td>
+                          <% end %>
                             <% if BuyerStock.all.where(user_id: current_user.id, stock_id: broker_stock.stock_id).count > 0 %>
-                          <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
                               <% id = BuyerStock.find_by(user_id: current_user.id, stock_id: broker_stock.stock_id) %>
                               <%= link_to image_tag("delete_red.svg", class:"w-4 h-4"), buyer_stock_path(broker_stock.stock_id), method: :delete, data: { confirm: 'Are you sure?' } %>
                               </td><%#= button_to 'Remove', buyer_stock_path(broker_stock.stock_id), method: :delete, data: { confirm: 'Are you sure?' }, class: "w-16 rounded text-xs text-center text-red-400 ring ring-red-400 p-1 cursor-pointer" %>
