updated favicon and navlinks

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
           <a class="inline-block py-2 px-4 text-white font-bold no-underline" href="#links">Be a Buyer</a>
       </li>
       <li class="mr-3">
-          <a class="inline-block text-white no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#links">Be a Buyer</a>
+          <a class="inline-block text-white no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#links">Be a Broker</a>
       </li>
     </ul>
   </div>
