--- a/app/views/buyers/_index.html.erb
+++ b/app/views/buyers/_index.html.erb
@@ -174,16 +174,16 @@ table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, table.dataT
                         <td class="w-full lg:w-auto text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
                           <div class="flex justify-start align-center ml-20">
                           <%= form_with model: BuyerStock.new, local: true do |f| %>
-                            <%= f.hidden_field :broker_id, :value => broker_stock.user_id %>
-                            <%= f.hidden_field :user_id, :value => current_user.id %>
+                            <%= f.hidden_field :broker_id, :value => broker_stock.buyer_id %>
+                            <%= f.hidden_field :buyer_id, :value => current_user.id %>
                             <%= f.hidden_field :stock_id, :value => broker_stock.stock_id %>
                             <%= f.hidden_field :companyname, :value => broker_stock.companyname %>
                             <%= f.hidden_field :price, :value => broker_stock.price %>
                             <%= f.number_field :quantity, class: 'bg-blue-100 text-black pl-4 w-24 rounded-xl', placeholder: 'Quantity' %>
                             <%= f.submit 'Add to Portolio', class:"w-24 rounded text-xs text-center text-green-400 ring ring-green-400 p-1 cursor-pointer ml-2"%>
                           <% end %>
-                            <% if BuyerStock.all.where(user_id: current_user.id, stock_id: broker_stock.stock_id).count > 0 %>
-                              <% id = BuyerStock.find_by(user_id: current_user.id, stock_id: broker_stock.stock_id) %>
+                            <% if BuyerStock.all.where(buyer_id: current_user.id, stock_id: broker_stock.stock_id).count > 0 %>
+                              <% id = BuyerStock.find_by(buyer_id: current_user.id, stock_id: broker_stock.stock_id) %>
                               <%= link_to image_tag("delete_red.svg", class:"w-4 h-6 ml-4"), buyer_stock_path(broker_stock.stock_id), method: :delete, data: { confirm: 'Are you sure?' } %>
                          </div>
                         </td>
