changed broker and buyer username to email in transaction displays

--- a/app/views/transacts/show_admin_transact.html.erb
+++ b/app/views/transacts/show_admin_transact.html.erb
@@ -168,9 +168,9 @@ table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, table.dataT
                    <% @transacts.each do |transact| %>
                       <tr class="bg-gray-200 lg:hover:bg-gray-100 flex lg:table-row flex-row lg:flex-row flex-wrap lg:flex-no-wrap lg:mb-0">
                         <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
-                        <%= User.find(transact.broker_id).username %></td>
+                        <%= transact.broker_email %></td>
                         <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
-                        <%= User.find(transact.buyer_id).username%></td>
+                        <%= transact.buyer_email %></td>
                         <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
                         <%= transact.stock_id %></td>
                         <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
