modified unapproved broker account message

--- a/app/views/brokers/_unapproved.html.erb
+++ b/app/views/brokers/_unapproved.html.erb
@@ -90,7 +90,7 @@
     <div class="main-content flex flex-col flex-grow p-2">
       <div class="flex flex-col flex-grow rounded">
             <p>Welcome <%= current_user.email %>! (<%= current_user.type %> account)</p>
-            <p>Paapprove ka muna sa admin pre</p>  
+            <p>Account unverified. You can start making transactions once an admin verifies your account.</p>  
       </div>
     </div>
   </div>
