Update uanpproved page, login and sign up page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
               <h2 class="font-bold tracking-tighter text-white text-4xl transition duration-500 ease-in-out transform hover:text-lightBlack-500 dark:text-lightBlue-400 pl-2 pb-2"> stonks </h2>
             </a>
             <h2 class="mt-12 mb-2 text-2xl font-semibold tracking-tighter text-white sm:text-2xl title-font"> Create an account. </h2>
-            <div class="w-full mt-16 mb-8 text-base leading-relaxed text-white sm:md:w-3/3 lg:text-1xl "> All you have to do is choose the section you need, remove the one that you do not need for that project and paste the one you need in that moment. All the section have been given the same left/right padding. Because consistence is king. </div>
+            <div class="w-full mt-16 mb-8 text-base leading-relaxed text-white sm:md:w-3/3 lg:text-1xl "> Stock markets are where individual and institutional investors come together to buy and sell shares in a public venue. Nowadays these exchanges exist as electronic marketplaces. </div>
           </div>
         </div>
         <div class="w-full px-8 py-24 bg-black rounded-lg border-blueGray-100 lg:w-8/12 lg:px-24 lg:py-4 lg:rounded-l-none s">
@@ -38,7 +38,7 @@
                   <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block w-full px-4 py-2 mt-2 text-base text-black transition duration-500 ease-in-out transform border-transparent rounded-lg bg-blueGray-100 focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2 ext-black focus:border-blueGray-500", placeholder:"Confirm Password"  %>
                 </div>
               </div>
-              <%= f.submit "Sign up",class:"block w-full px-4 py-3 mt-6 font-semibold text-black transition duration-500 ease-in-out transform rounded-lg bg-indigo-500 hover:from-black to-black focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2 hover:to-black mb-6" %>
+              <%= f.submit "Sign up",class:"block w-full px-4 py-3 mt-4 font-semibold text-black transition duration-500 ease-in-out transform rounded-lg bg-indigo-500 hover:from-black to-black focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2 hover:to-black mb-8" %>
             </form>
             <% end %>
             <%= link_to "Back", :back, class: "mt-3 px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-gray-900 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2" %>
